--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ python-dotenv = "^1.0.1"
 django-htmx = "^1.22.0"
 django-template-partials = "^24.4"
 pillow = "^11.1.0"
+langchain-google-genai = "^2.0.11"
+langchain-ollama = "^0.2.3"
+langchain-groq = "^0.2.5"
 
 [build-system]
 requires = ["poetry-core"]
